--- a/seri+rohit/templates/home.html
+++ b/seri+rohit/templates/home.html
@@ -1,8 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<div class="jumbotron text-center">
+	<!-- <div class="jumbotron text-center">
 		<h1>Welcome</h1>
 		<p class="lead">This application</p>
-	</div>
+	</div> -->
+
+    
 {% endblock %}
