--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="/static/style/main.css">
         <link rel="shortcut icon" type="image/png" href="/static/images/favicon.png"/>
 
-        <title>MariWanna</title>
+        <title>CharityOne</title>
     </head>
 
     <body style="background-image: url('../images/background-grey.jpg');">
