--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,8 @@
         <link rel="stylesheet" href="/static/style/main.css">
         <link rel="shortcut icon" type="image/png" href="/static/images/charityone.png"/>
 
-<<<<<<< HEAD
         <title>CharityOne</title>
-=======
-        <title>Charity One</title>
->>>>>>> 66d5ef4024c843bd6ee3595152c2efe36af624a0
+
     </head>
 
     <body style="background-image: url('../images/background-grey.jpg'); overflow-y: hidden;">
@@ -52,7 +49,7 @@
             <img  src="/static/images/icon_48.gif"/>
             <p>Loading... </p>
         </div> -->
-        <div id="mainContent">
+        <div id="mainContent" style="background-image: url('/static/images/charity-search.png')">
           <div class="d-flex flex-column justify-content-center h-50">
             <h1 class="text-center p-4">Finding Ways to Give Back is Hard...</h1>
             <h3 class="text-center p-4">Let Us Help You</h3>
@@ -61,9 +58,6 @@
             <a class="btn btn-dark" href="/give_back">Sync Bank Account</a>
           </div>
           </div>
-          <img src="/static/images/charity-search.png" style="margin:-195px -50px">
-          <img src="/static/images/charity-search.png" style="margin:-195px 400px">
-          <img src="/static/images/charity-search.png" style="margin:-500px 800px">
         </div>
         <script>
             var height = $(window).height();
