--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,8 @@
         <link rel="stylesheet" href="/static/style/main.css">
         <link rel="shortcut icon" type="image/png" href="/static/images/charityone.png"/>
 
-        <title>Charity One</title>
+        <title>CharityOne</title>
+
     </head>
 
     <body style="background-image: url('../images/background-grey.jpg'); overflow-y: hidden;">
@@ -48,7 +49,7 @@
             <img  src="/static/images/icon_48.gif"/>
             <p>Loading... </p>
         </div> -->
-        <div id="mainContent">
+        <div id="mainContent" style="background-image: url('/static/images/charity-search.png'); background-repeat: repeat-x; background-position: left bottom">
           <div class="d-flex flex-column justify-content-center h-50">
             <h1 class="text-center p-4">Finding Ways to Give Back is Hard...</h1>
             <h3 class="text-center p-4">Let Us Help You</h3>
@@ -57,14 +58,10 @@
             <a class="btn btn-dark" href="/give_back">Sync Bank Account</a>
           </div>
           </div>
-          <img src="/static/images/charity-search.png" style="margin:-195px -50px">
-          <img src="/static/images/charity-search.png" style="margin:-195px 400px">
-          <img src="/static/images/charity-search.png" style="margin:-500px 800px">
         </div>
         <script>
             var height = $(window).height();
-            let nav_height = $("nav").height();
-            $("#mainContent").css("min-height", height-nav_height);
+            $("#mainContent").css("min-height", height);
         </script>
     </body>
 
