--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                 <ul class="navbar-nav d-flex justify-content-between w-100">
                     <div class="d-flex">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">About Us</a>
+                            <a class="nav-link" href="/about_us">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/">Charities</a>
